@@ -1,0 +1,336 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "V. Schnabel, R. Spolenak, M. Döbeli, H. Galinski. Structural color sensors with thermal memory: Measuring functional properties of Ti-based nitrides by eye, <a href=\"https://doi.org/10.1002/adom.201800656\"><i>Adv. Opt. Mater.</i> <b>6</b>, 1800656 (2018)</a>"
+COMMENTS: "Reactive magnetron sputtering; Ar/N<sub>2</sub> gas mixture of 10/1; negative bias potential: 100 V; substrate temperature: 400°C"
+DATA:
+  - type: tabulated nk
+    data: |
+        0.2916 2.373 1.055
+        0.2932 2.381 1.049
+        0.2948 2.360 1.058
+        0.2963 2.342 1.060
+        0.2979 2.330 1.069
+        0.2995 2.333 1.061
+        0.3011 2.321 1.057
+        0.3027 2.316 1.066
+        0.3043 2.311 1.066
+        0.3059 2.305 1.074
+        0.3075 2.294 1.059
+        0.3091 2.287 1.074
+        0.3107 2.278 1.073
+        0.3123 2.272 1.074
+        0.3139 2.257 1.067
+        0.3154 2.260 1.065
+        0.3170 2.261 1.066
+        0.3186 2.245 1.080
+        0.3202 2.251 1.078
+        0.3218 2.243 1.075
+        0.3234 2.236 1.074
+        0.3250 2.232 1.074
+        0.3266 2.226 1.067
+        0.3282 2.226 1.062
+        0.3298 2.216 1.070
+        0.3314 2.216 1.076
+        0.3329 2.218 1.070
+        0.3345 2.205 1.065
+        0.3361 2.210 1.062
+        0.3377 2.198 1.065
+        0.3393 2.198 1.061
+        0.3409 2.197 1.073
+        0.3425 2.191 1.061
+        0.3441 2.190 1.053
+        0.3457 2.177 1.056
+        0.3473 2.177 1.057
+        0.3489 2.179 1.055
+        0.3505 2.167 1.052
+        0.3520 2.168 1.042
+        0.3536 2.165 1.046
+        0.3552 2.153 1.036
+        0.3568 2.145 1.036
+        0.3584 2.152 1.026
+        0.3600 2.148 1.026
+        0.3616 2.135 1.018
+        0.3632 2.130 1.011
+        0.3648 2.124 1.015
+        0.3664 2.124 1.013
+        0.3679 2.113 1.009
+        0.3695 2.112 1.007
+        0.3711 2.104 1.000
+        0.3727 2.103 0.988
+        0.3743 2.093 0.980
+        0.3759 2.082 0.982
+        0.3775 2.071 0.979
+        0.3791 2.064 0.969
+        0.3807 2.060 0.965
+        0.3823 2.046 0.960
+        0.3838 2.039 0.953
+        0.3854 2.034 0.950
+        0.3870 2.018 0.942
+        0.3886 2.015 0.941
+        0.3902 1.998 0.932
+        0.3918 1.989 0.929
+        0.3934 1.979 0.928
+        0.3950 1.964 0.925
+        0.3966 1.959 0.921
+        0.3981 1.947 0.912
+        0.3997 1.937 0.906
+        0.4013 1.920 0.908
+        0.4029 1.907 0.908
+        0.4045 1.894 0.904
+        0.4061 1.886 0.903
+        0.4077 1.875 0.898
+        0.4093 1.858 0.896
+        0.4109 1.841 0.894
+        0.4124 1.831 0.896
+        0.4140 1.818 0.898
+        0.4156 1.804 0.899
+        0.4172 1.791 0.898
+        0.4188 1.778 0.895
+        0.4204 1.765 0.898
+        0.4220 1.749 0.898
+        0.4236 1.739 0.901
+        0.4252 1.724 0.906
+        0.4267 1.708 0.909
+        0.4283 1.695 0.907
+        0.4299 1.683 0.909
+        0.4315 1.664 0.912
+        0.4331 1.652 0.916
+        0.4347 1.637 0.920
+        0.4363 1.621 0.926
+        0.4379 1.605 0.934
+        0.4394 1.591 0.936
+        0.4410 1.578 0.941
+        0.4426 1.563 0.944
+        0.4442 1.549 0.949
+        0.4458 1.535 0.955
+        0.4474 1.519 0.963
+        0.4490 1.503 0.971
+        0.4506 1.490 0.979
+        0.4521 1.474 0.988
+        0.4537 1.462 0.994
+        0.4553 1.449 0.999
+        0.4569 1.434 1.008
+        0.4585 1.422 1.014
+        0.4601 1.407 1.027
+        0.4617 1.392 1.037
+        0.4632 1.379 1.049
+        0.4648 1.364 1.058
+        0.4664 1.354 1.068
+        0.4680 1.342 1.079
+        0.4696 1.329 1.090
+        0.4712 1.316 1.099
+        0.4728 1.305 1.107
+        0.4744 1.295 1.122
+        0.4759 1.283 1.132
+        0.4775 1.272 1.146
+        0.4791 1.262 1.157
+        0.4807 1.251 1.172
+        0.4823 1.239 1.184
+        0.4839 1.228 1.197
+        0.4855 1.220 1.206
+        0.4870 1.210 1.220
+        0.4886 1.201 1.233
+        0.4902 1.193 1.246
+        0.4918 1.183 1.259
+        0.4934 1.173 1.270
+        0.4950 1.164 1.286
+        0.4966 1.155 1.300
+        0.4982 1.148 1.313
+        0.4997 1.141 1.326
+        0.5013 1.133 1.337
+        0.5029 1.125 1.349
+        0.5045 1.116 1.364
+        0.5061 1.110 1.376
+        0.5077 1.103 1.392
+        0.5093 1.095 1.403
+        0.5108 1.089 1.417
+        0.5124 1.085 1.434
+        0.5140 1.076 1.445
+        0.5156 1.070 1.454
+        0.5172 1.070 1.467
+        0.5188 1.060 1.480
+        0.5204 1.053 1.499
+        0.5219 1.049 1.512
+        0.5235 1.045 1.516
+        0.5251 1.044 1.523
+        0.5267 1.039 1.534
+        0.5283 1.033 1.546
+        0.5299 1.027 1.563
+        0.5315 1.020 1.578
+        0.5330 1.015 1.588
+        0.5346 1.008 1.606
+        0.5362 1.006 1.620
+        0.5378 0.999 1.630
+        0.5394 0.996 1.644
+        0.5410 0.992 1.655
+        0.5426 0.988 1.667
+        0.5442 0.983 1.681
+        0.5457 0.981 1.690
+        0.5473 0.972 1.706
+        0.5489 0.970 1.717
+        0.5505 0.965 1.728
+        0.5521 0.962 1.742
+        0.5537 0.959 1.754
+        0.5553 0.956 1.770
+        0.5568 0.952 1.781
+        0.5584 0.948 1.791
+        0.5600 0.943 1.805
+        0.5616 0.940 1.818
+        0.5632 0.938 1.831
+        0.5648 0.933 1.837
+        0.5664 0.930 1.851
+        0.5680 0.927 1.862
+        0.5695 0.922 1.876
+        0.5711 0.920 1.889
+        0.5727 0.917 1.904
+        0.5743 0.914 1.915
+        0.5759 0.910 1.926
+        0.5775 0.904 1.938
+        0.5791 0.899 1.950
+        0.5807 0.899 1.962
+        0.5822 0.895 1.974
+        0.5838 0.894 1.984
+        0.5854 0.890 1.998
+        0.5870 0.887 2.011
+        0.5886 0.888 2.025
+        0.5902 0.883 2.034
+        0.5918 0.882 2.049
+        0.5933 0.879 2.060
+        0.5949 0.874 2.074
+        0.5965 0.874 2.088
+        0.5981 0.872 2.098
+        0.5997 0.867 2.108
+        0.6013 0.867 2.120
+        0.6029 0.863 2.133
+        0.6045 0.858 2.145
+        0.6060 0.859 2.156
+        0.6076 0.855 2.170
+        0.6092 0.852 2.178
+        0.6108 0.852 2.191
+        0.6124 0.847 2.199
+        0.6140 0.847 2.215
+        0.6156 0.845 2.226
+        0.6172 0.843 2.238
+        0.6187 0.843 2.249
+        0.6203 0.837 2.260
+        0.6219 0.835 2.274
+        0.6235 0.833 2.284
+        0.6251 0.834 2.299
+        0.6267 0.829 2.309
+        0.6283 0.830 2.326
+        0.6299 0.826 2.333
+        0.6314 0.825 2.343
+        0.6330 0.821 2.353
+        0.6346 0.821 2.370
+        0.6362 0.819 2.381
+        0.6378 0.821 2.398
+        0.6394 0.819 2.404
+        0.6410 0.818 2.414
+        0.6426 0.816 2.428
+        0.6442 0.817 2.437
+        0.6457 0.813 2.455
+        0.6473 0.812 2.464
+        0.6489 0.810 2.473
+        0.6505 0.809 2.484
+        0.6521 0.805 2.498
+        0.6537 0.808 2.513
+        0.6553 0.804 2.517
+        0.6569 0.800 2.533
+        0.6584 0.806 2.547
+        0.6600 0.804 2.562
+        0.6616 0.800 2.570
+        0.6632 0.801 2.579
+        0.6648 0.797 2.589
+        0.6664 0.796 2.603
+        0.6680 0.798 2.619
+        0.6696 0.797 2.625
+        0.6712 0.796 2.636
+        0.6727 0.798 2.648
+        0.6743 0.803 2.660
+        0.6759 0.794 2.674
+        0.6775 0.793 2.680
+        0.6791 0.793 2.698
+        0.6807 0.790 2.706
+        0.6823 0.792 2.720
+        0.6839 0.793 2.727
+        0.6855 0.794 2.735
+        0.6870 0.791 2.752
+        0.6886 0.794 2.761
+        0.6902 0.790 2.777
+        0.6918 0.786 2.788
+        0.6934 0.783 2.792
+        0.6950 0.785 2.809
+        0.6966 0.787 2.819
+        0.6981 0.784 2.826
+        0.6997 0.791 2.843
+        0.7013 0.786 2.851
+        0.7029 0.789 2.868
+        0.7045 0.786 2.872
+        0.7061 0.785 2.883
+        0.7077 0.788 2.899
+        0.7093 0.788 2.909
+        0.7109 0.782 2.918
+        0.7125 0.785 2.935
+        0.7140 0.787 2.943
+        0.7156 0.797 2.959
+        0.7172 0.791 2.965
+        0.7188 0.795 2.972
+        0.7204 0.792 2.980
+        0.7220 0.792 3.001
+        0.7236 0.789 2.993
+        0.7252 0.790 3.017
+        0.7267 0.786 3.028
+        0.7283 0.792 3.030
+        0.7299 0.787 3.040
+        0.7315 0.782 3.060
+        0.7331 0.792 3.075
+        0.7347 0.786 3.078
+        0.7363 0.790 3.094
+        0.7378 0.785 3.101
+        0.7394 0.792 3.110
+        0.7410 0.788 3.119
+        0.7426 0.789 3.137
+        0.7442 0.800 3.146
+        0.7458 0.793 3.158
+        0.7474 0.799 3.171
+        0.7490 0.795 3.188
+        0.7505 0.796 3.180
+        0.7521 0.798 3.183
+        0.7537 0.795 3.217
+        0.7553 0.801 3.222
+        0.7569 0.795 3.234
+        0.7585 0.792 3.233
+        0.7601 0.796 3.246
+        0.7616 0.797 3.248
+        0.7632 0.800 3.273
+        0.7648 0.800 3.283
+        0.7664 0.796 3.307
+        0.7680 0.794 3.306
+        0.7696 0.799 3.317
+        0.7711 0.800 3.327
+        0.7727 0.793 3.326
+        0.7743 0.805 3.348
+        0.7759 0.806 3.353
+        0.7775 0.803 3.363
+        0.7791 0.809 3.365
+        0.7806 0.815 3.387
+        0.7822 0.804 3.394
+        0.7838 0.811 3.411
+        0.7854 0.807 3.414
+        0.7870 0.812 3.441
+        0.7886 0.818 3.445
+        0.7901 0.811 3.445
+        0.7917 0.824 3.482
+        0.7933 0.807 3.485
+        0.7949 0.805 3.490
+        0.7965 0.823 3.494
+        0.7980 0.817 3.497
+        0.7996 0.821 3.515
+        0.8012 0.820 3.539
+        0.8028 0.822 3.538
+        0.8044 0.819 3.546
+        0.8059 0.825 3.554
+        0.8075 0.812 3.552
+        0.8091 0.832 3.579
